<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PasswordMatcherActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/display_title"
        android:text="@string/match_passwords_title" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" >
        <!-- Illustration only, don't do this at home (in this way) -->
        <tag android:id="@+id/password1" android:value="" />
    </EditText>
    <EditText
        android:id="@+id/matchingPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/matching_password"
        android:inputType="textPassword"
        android:text="" >
        <tag android:id="@+id/password2" android:value="" />
    </EditText>
    <Button
        android:id="@+id/matchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/submit_match_password_button"
        android:text="@string/match_password_button">
        <tag android:id="@id/ALSO_MINE" android:value="" />
    </Button>
    <TextView
        android:id="@+id/passwordResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/match_password_notice"
        android:visibility="gone" />
</LinearLayout>
