<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="MINE"/>
    <item type="id" name="ALSO_MINE"/>
</resources>